# PolarBT

./: .gitignore  CHANGELOG.md  DESCRIPTION.md  ENHANCEMENT_ROADMAP.md  IMPLEMENTATION.md  LICENSE  PHASE_1_5_DAY_ORDER_ENHANCEMENT.md  PHASE_1_5_SUMMARY.md  PLAN.md  PLAN_TRADE_DATA.md  POTENTIAL_ISSUES.md  README.md  TODO.md  agents.md  example.py  findings.md  progress.md  pyproject.toml  requirements.txt  setup.py  task_plan.md
.github/workflows/: publish.yml
agents/: CODE_STYLE.md
archive/: 07-optimizer-fixes.md  09-data-utilities.md  10-optimization-enhancements.md  12-documentation-examples.md  2026-03-08_issues_fix.md  2026-03-09_cleanup_optimize_result.md
docs/: api-reference.md  complete-reference.md  getting-started.md
examples/: example.py  example_advanced_analysis.py  example_commission.py  example_defi_trades.py  example_limit_orders.py  example_ml_strategy.py  example_momentum_rotation.py  example_multi_asset.py  example_plotting.py  example_readme.py  example_rsi_bracket_orders.py  example_sma_crossover_stoploss.py  example_trade_analysis.py  example_walk_forward.py  example_weight_backtest.py
polarbt/: __init__.py  analysis.py  commissions.py  core.py  indicators.py  indicators_defi.py  metrics.py  results.py  runner.py  sizers.py  slippage.py  trades.py  universe.py  weight_backtest.py
polarbt/data/: __init__.py  cleaning.py  trades.py
polarbt/integrations/: talib.py
polarbtest/: __init__.py  analysis.py  core.py  indicators.py  metrics.py  orders.py  runner.py  sizers.py  trades.py
tests/: __init__.py  test_additional_indicators.py  test_advanced_analysis.py  test_bracket_orders.py  test_bugfixes.py  test_commissions.py  test_core.py  test_core_api_coverage.py  test_data_utils.py  test_enhanced_metrics.py  test_indicator_correctness.py  test_indicators.py  test_indicators_defi.py  test_issues_fix.py  test_limit_orders.py  test_long_format.py  test_mae_mfe.py  test_margin_leverage.py  test_metrics_standalone.py  test_optimization.py  test_order_expiry.py  test_orders.py  test_percentage_orders.py  test_permutation_perf.py  test_plotting.py  test_risk_limits.py  test_runner.py  test_short_selling.py  test_sizers.py  test_slippage_and_exchange.py  test_stop_orders.py  test_take_profit.py  test_talib_integration.py  test_talib_real.py  test_trade_data.py  test_trades.py  test_trailing_stop.py  test_universe.py  test_warmup.py  test_weight_backtest.py
(+10 files in other folders)
